<resources>
    <string name="app_name">Kotlin_IntentDigitalHub</string>
    <string name="text_footer_java_android">Intent Digital Hub - Kotlin 1.1.0</string>
    //Module buttons name
    <string name="bridge_module">BRIDGE</string>
    <string name="printer_module">IMPRESSORA</string>
    <string name="balance_module">BALANÇA</string>
    <string name="sat_module">SAT</string>

    //Titles
    <string name="text_title_impressora">IMPRESSORA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Arrays Printer
    <string-array name="fontfamily">
        <item>FONT A</item>
        <item>FONT B</item>
    </string-array>

    <string-array name="fontSize">
        <item>17</item>
        <item>34</item>
        <item>51</item>
        <item>68</item>
    </string-array>

    <string-array name="typeCodeBar">
        <item>EAN 8</item>
        <item>EAN 13</item>
        <item>QR CODE</item>
        <item>UPC-A</item>
        <item>CODE 39</item>
        <item>ITF</item>
        <item>CODE BAR</item>
        <item>CODE 93</item>
        <item>CODE 128</item>
    </string-array>

    <string-array name="heightBarCode">
        <item>20</item>
        <item>60</item>
        <item>120</item>
        <item>200</item>
    </string-array>

    <string-array name="widthBarCode">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>