<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:src="@drawable/elgin_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/buttonBridge"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:background="@drawable/box"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="5dp"
                android:src="@drawable/elginpay_logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/bridge_module"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonPrinter"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/box"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/buttonBridge"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="3dp"
                android:src="@drawable/printer" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/printer_module"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/buttonBalanca"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonSAT"
            app:layout_constraintTop_toBottomOf="@id/buttonBridge">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="3dp"
                android:src="@drawable/balanca" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/balance_module"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonSAT"
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/buttonBalanca"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonBridge">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="3dp"
                android:src="@drawable/sat" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/sat_module"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_footer_java_android"
            android:textColor="#7F7F7F"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
